# vokex

./: .gitignore  CLAUDE.md  README.md  SECURITY_PLAN.md  api-doc.md  check.cjs  package-lock.json  package.json
.trae/rules/: git-commit-message.md
example/: index.html  pnpm-lock.yaml  vite.config.ts
example/src/: browserWindow.ts  dialog.ts  fs.ts  http.ts  path.ts  safeStorage.ts  shell.ts  shortcut.ts  storage.ts  test.ts  tray.ts  vokex.d.ts
shell/: Cargo.toml  build.rs
shell/src/: app_config.rs  ipc.rs  main.rs  utils.rs  window_manager.rs
shell/src/apis/: browser_window.rs  dialog.rs  fs.rs  http.rs  mod.rs  path.rs  safe_storage.rs  shell.rs  shortcut.rs  storage.rs  tray.rs
shell/src/security/: dangerous_apis.rs  inject.rs  mod.rs  origin.rs  permissions.rs  url_parser.rs
src/: index.ts
src/runtime/: api.ts
src/runtime/apis/: browserWindow.ts  dialog.ts  events.ts  fs.ts  http.ts  path.ts  safeStorage.ts  shell.ts  shortcut.ts  storage.ts
src/vite-plugin/: index.ts
