[package]
name = "vokex-shell"
version = "0.1.5"
edition = "2021"
description = "Lightweight native shell for the 'vokex' desktop framework"

[dependencies]
wry = "0.55"
tao = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
mime_guess = "2"
hostname = "0.4"
dirs = "5"
sys-locale = "0.3"
fs2 = "0.4"
notify-rust = "4"
open = "5.1"
trash = "5.2"
ureq = { version = "3", default-features = false, features = ["native-tls", "gzip"] }
rfd = { version = "0.17", default-features = false, features = ["xdg-portal", "common-controls-v6"] }
arboard = { version = "3" }
raw-window-handle = "0.6"
muda = "0.17"
tray-icon = "0.21"
png = "0.17"
ico = "0.5"
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
glob = "0.3"
walkdir = "2"
fast-glob = "1.0"
global-hotkey = "0.8"
base64 = "0.22"
keyring = { version = "2", default-features = false, features = ["secret-service"] }
aes-gcm = "0.10"
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
libc = "0.2"
nix = "0.27"

[target.'cfg(target_os = "macos")'.dependencies]
nix = "0.27"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_System_Memory", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }

[build-dependencies]
winres = "0.1"

[dev-dependencies]
serial_test = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
